When using gnu-radis for PPPoE authorization from Cisco BRAS it complains about: May 18 13:09:35 penguin radiusd: Auth.error: string too long: 0/0/0/252_0001D876 Long time ago (at 2004) I convinced author to increase this string from 16 bytes to 32, but it seems in time this patch was somewhat forgot. I've already reported it upstream, but temporarily pls include it in port distribution for 1.6.1. Fix: Patch attached with submission follows:
Responsible Changed From-To: freebsd-ports-bugs->gahr Over to maintainer (via the GNATS Auto Assign Tool)
gahr 2009-05-07 20:45:09 UTC FreeBSD ports repository Modified files: net/gnu-radius pkg-plist Added files: net/gnu-radius/files patch-include-radius_radutmp.h Log: - Extend RUT_IDSIZE from 16 to 32 [1] - Fix PLIST PR: 134335 [1] Submitted by: Oleg Gawriloff <barzog@telecom.by> Revision Changes Path 1.1 +11 -0 ports/net/gnu-radius/files/patch-include-radius_radutmp.h (new) 1.18 +3 -3 ports/net/gnu-radius/pkg-plist _______________________________________________ cvs-all@freebsd.org mailing list http://lists.freebsd.org/mailman/listinfo/cvs-all To unsubscribe, send any mail to "cvs-all-unsubscribe@freebsd.org"
State Changed From-To: open->closed Committed. Thanks!
A commit references this bug: Author: avos Date: Sun Jan 27 16:44:28 UTC 2019 New revision: 343500 URL: https://svnweb.freebsd.org/changeset/base/343500 Log: m_getm2: correct a comment. The comment states that function always return a top of allocated mbuf; however, the function actually return the overall mbuf chain top pointer. Since there are already existing users of it (via m_getm(4) macro), rephrase the comment and leave behavior unchanged. PR: 134335 MFC after: 12 days Changes: head/sys/kern/kern_mbuf.c